--- a/src/css/style.css
+++ b/src/css/style.css
@@ -169,18 +169,42 @@ article{
     margin-bottom: 54px;
 }
 
+/*.article{*/
+    /*position: relative;*/
+    /*padding-left: 144px;*/
+    /*min-height: 85px;*/
+/*}*/
+
+/*.article img{*/
+    /*position: absolute;*/
+    /*left: 20px;*/
+    /*top: calc(50% - 32px);*/
+    /*width: 100px;*/
+    /*height: auto;*/
+/*}*/
 .article{
-    position: relative;
-    padding-left: 144px;
-    min-height: 85px;
+    display: grid;
+    grid-template-columns: 144px auto;
+    grid-template-rows: auto auto;
+    /*grid-template-areas:*/
+    /*"image title"*/
+    /*"image text";*/
+    /*grid-column-gap: 44px;*/
 }
 
 .article img{
-    position: absolute;
-    left: 20px;
-    top: calc(50% - 32px);
     width: 100px;
     height: auto;
+    grid-area: image;
+    justify-self: center;
+}
+
+.article h2{
+    /*grid-area: title;*/
+}
+
+.article p{
+    /*grid-area: text;*/
 }
 
 /* ========================/main=========================== */
