--- a/src/css/style.css
+++ b/src/css/style.css
@@ -153,6 +153,7 @@ article{
 
 /* ========================main=========================== */
 .content{
+    display: block;
     margin: 40px 0 27px;
 }
 
@@ -169,44 +170,38 @@ article{
     margin-bottom: 54px;
 }
 
-/*.article{*/
-    /*position: relative;*/
-    /*padding-left: 144px;*/
-    /*min-height: 85px;*/
-/*}*/
-
-/*.article img{*/
-    /*position: absolute;*/
-    /*left: 20px;*/
-    /*top: calc(50% - 32px);*/
-    /*width: 100px;*/
-    /*height: auto;*/
-/*}*/
 .article{
-    display: grid;
-    grid-template-columns: 144px auto;
-    grid-template-rows: auto auto;
-    /*grid-template-areas:*/
-    /*"image title"*/
-    /*"image text";*/
-    /*grid-column-gap: 44px;*/
+    position: relative;
+    padding-left: 144px;
+    min-height: 85px;
 }
 
 .article img{
+    position: absolute;
+    left: 20px;
+    top: calc(50% - 32px);
     width: 100px;
     height: auto;
-    grid-area: image;
-    justify-self: center;
 }
 
-.article h2{
-    /*grid-area: title;*/
-}
+@supports(grid-area: auto){
+    .article{
+        display: grid;
+        grid-template-columns: 144px auto;
+        position: static;
+        padding-left: 0;
+        min-height: auto;
+    }
 
-.article p{
-    /*grid-area: text;*/
+    .article img{
+        position: static;
+        grid-area: image;
+        justify-self: center;
+        align-self: center;
+        grid-row: 1 / 100;
+        grid-column: 1 / 2;
+    }
 }
-
 /* ========================/main=========================== */
 
 /* =======================footer=========================== */
